--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <button id="loadQuote">Show another quote</button>
   </div>
   <script src="js/script.js"></script>
+  <script src="js/quote.js"></script>
 </body>
 </html>
